// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel styles should not render without slides data 1`] = `null`;

exports[`Carousel styles should render with children as a function 1`] = `
@keyframes animation-0 {
  0% {
    width: 0%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  90% {
    width: 100%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  100% {
    width: 100%;
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  90% {
    width: 100%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  100% {
    width: 100%;
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }
}

.circuit-55 {
  width: 100%;
  height: auto;
  position: relative;
}

.circuit-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  position: relative;
  width: 100%;
  height: auto;
}

.circuit-9 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(0%,0,0);
  -ms-transform: translate3d(0%,0,0);
  transform: translate3d(0%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: 0;
}

.circuit-7 {
  box-shadow: 0 0 1px rgba(0,0,0,0.05);
  overflow: hidden;
  will-change: width;
}

.circuit-5 {
  width: 100%;
}

.circuit-3 {
  display: block;
  position: relative;
  overflow: hidden;
  height: auto;
  width: 100%;
  height: 0;
  width: 100%;
  padding-top: 56%;
  background: #F5F5F5;
}

.circuit-0 {
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  max-height: none;
  object-fit: cover;
  z-index: 2;
}

.circuit-0 img {
  object-fit: cover;
}

.circuit-20 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(-100%,0,0);
  -ms-transform: translate3d(-100%,0,0);
  transform: translate3d(-100%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: -1;
}

.circuit-31 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(-200%,0,0);
  -ms-transform: translate3d(-200%,0,0);
  transform: translate3d(-200%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: -2;
}

.circuit-53 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 16px;
}

.circuit-37 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  font-weight: 700;
  margin-bottom: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 48px;
}

@media (max-width:479px) {
  .circuit-37 {
    font-size: 14px;
    line-height: 20px;
  }
}

@media (max-width:479px) {
  .circuit-37 {
    margin-right: 12px;
  }
}

.circuit-41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.circuit-38 {
  background-color: #E6E6E6;
  border-radius: 999999px;
  position: relative;
  width: 100%;
  overflow: hidden;
  height: 4px;
}

.circuit-38::after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  background-color: #3063E9;
  -webkit-transition: width 0.05s ease-out;
  transition: width 0.05s ease-out;
  height: 100%;
  width: 1px;
}

.circuit-38::after {
  background-color: #1A1A1A;
}

.circuit-38::after {
  border-radius: 999999px;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  -webkit-animation-duration: 5640ms;
  animation-duration: 5640ms;
  -webkit-animation-play-state: running;
  animation-play-state: running;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.circuit-39 {
  font-size: 14px;
  line-height: 20px;
  margin-left: 8px;
}

.circuit-51 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 48px;
}

@media (max-width:479px) {
  .circuit-51 {
    margin-left: 12px;
  }
}

.circuit-44 {
  font-size: 16px;
  line-height: 24px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999;
  color: #000;
  padding: calc(12px - 1px) calc(24px - 1px);
  padding: calc(8px - 1px);
  margin-left: 8px;
}

.circuit-44:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-44:focus::-moz-focus-inner {
  border: 0;
}

.circuit-44:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-44:disabled,
.circuit-44[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-44:hover {
  background-color: #F5F5F5;
  border-color: #666;
}

.circuit-44:active,
.circuit-44[aria-expanded='true'],
.circuit-44[aria-pressed='true'] {
  background-color: #E6E6E6;
  border-color: #333;
}

.circuit-44:first-of-type {
  margin-left: 0;
}

.circuit-42 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
  aria-label="gallery"
  class="circuit-55 circuit-56"
>
  <div
    class="circuit-33 circuit-34"
  >
    <div
      class="circuit-9 circuit-10"
      width="100%"
    >
      <div
        class="circuit-7 circuit-8"
      >
        <div
          class="circuit-5 circuit-6"
          width="100%"
        >
          <div
            class="circuit-2 circuit-3 circuit-4"
          >
            <img
              alt="Aerial photo of turbulent blue ocean waves"
              class="circuit-0 circuit-1"
              src="https://source.unsplash.com/QU-zhliIV8Q/1600x900"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="circuit-20 circuit-10"
      width="100%"
    >
      <div
        class="circuit-7 circuit-8"
      >
        <div
          class="circuit-5 circuit-6"
          width="100%"
        >
          <div
            class="circuit-2 circuit-3 circuit-4"
          >
            <img
              alt="Aerial photo of turbulent turquoise ocean waves"
              class="circuit-0 circuit-1"
              src="https://source.unsplash.com/TpHmEoVSmfQ/1600x900"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="circuit-31 circuit-10"
      width="100%"
    >
      <div
        class="circuit-7 circuit-8"
      >
        <div
          class="circuit-5 circuit-6"
          width="100%"
        >
          <div
            class="circuit-2 circuit-3 circuit-4"
          >
            <img
              alt="Aerial photo of turbulent ocean water with white foam"
              class="circuit-0 circuit-1"
              src="https://source.unsplash.com/-lpbnspYkJg/1600x900"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="circuit-53 circuit-54"
  >
    <strong
      class="circuit-35 circuit-36 circuit-37"
    >
      1
       / 
      3
    </strong>
    <div
      class="circuit-40 circuit-41"
    >
      <span
        aria-labelledby="progress-bar_6"
        class="circuit-38"
        loop=""
      />
      <span
        class="circuit-39"
        id="progress-bar_6"
      />
    </div>
    <div
      class="circuit-51 circuit-52"
    >
      <button
        aria-label="pause"
        class="circuit-43 circuit-44"
        title="Pause"
      >
        <svg
          fill="none"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M6 1.7v12.6c0 .186-.105.364-.293.495A1.249 1.249 0 0 1 5 15a1.25 1.25 0 0 1-.707-.205C4.105 14.664 4 14.485 4 14.3V1.7c0-.186.105-.364.293-.495A1.25 1.25 0 0 1 5 1c.265 0 .52.074.707.205.188.131.293.31.293.495zm5-.7c-.265 0-.52.074-.707.205-.188.131-.293.31-.293.495v12.6c0 .186.105.364.293.495.187.131.442.205.707.205.265 0 .52-.074.707-.205.188-.131.293-.31.293-.495V1.7c0-.186-.105-.364-.293-.495A1.249 1.249 0 0 0 11 1z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="circuit-42"
        >
          Pause
        </span>
      </button>
      <button
        aria-label="previous"
        class="circuit-43 circuit-44"
        title="Previous"
      >
        <svg
          fill="none"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 8c0-.266.104-.52.29-.71l4-4c.19-.186.444-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71L7.42 8l3.29 3.29c.186.19.29.445.29.71a1 1 0 0 1-1 1c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 5 8z"
            fill="currentColor"
          />
        </svg>
        <span
          class="circuit-42"
        >
          Previous
        </span>
      </button>
      <button
        aria-label="next"
        class="circuit-43 circuit-44"
        title="Next"
      >
        <svg
          fill="none"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 8c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.265.104-.52.29-.71L8.58 8 5.29 4.71A1.013 1.013 0 0 1 5 4a1 1 0 0 1 1-1c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71z"
            fill="currentColor"
          />
        </svg>
        <span
          class="circuit-42"
        >
          Next
        </span>
      </button>
    </div>
  </div>
  <h1>
    Carousel heading for step #
    0
  </h1>
</div>
`;

exports[`Carousel styles should render with children as a node 1`] = `
@keyframes animation-0 {
  0% {
    width: 0%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  90% {
    width: 100%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  100% {
    width: 100%;
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  90% {
    width: 100%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  100% {
    width: 100%;
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }
}

.circuit-55 {
  width: 100%;
  height: auto;
  position: relative;
}

.circuit-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  position: relative;
  width: 100%;
  height: auto;
}

.circuit-9 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(0%,0,0);
  -ms-transform: translate3d(0%,0,0);
  transform: translate3d(0%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: 0;
}

.circuit-7 {
  box-shadow: 0 0 1px rgba(0,0,0,0.05);
  overflow: hidden;
  will-change: width;
}

.circuit-5 {
  width: 100%;
}

.circuit-3 {
  display: block;
  position: relative;
  overflow: hidden;
  height: auto;
  width: 100%;
  height: 0;
  width: 100%;
  padding-top: 56%;
  background: #F5F5F5;
}

.circuit-0 {
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  max-height: none;
  object-fit: cover;
  z-index: 2;
}

.circuit-0 img {
  object-fit: cover;
}

.circuit-20 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(-100%,0,0);
  -ms-transform: translate3d(-100%,0,0);
  transform: translate3d(-100%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: -1;
}

.circuit-31 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(-200%,0,0);
  -ms-transform: translate3d(-200%,0,0);
  transform: translate3d(-200%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: -2;
}

.circuit-53 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 16px;
}

.circuit-37 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  font-weight: 700;
  margin-bottom: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 48px;
}

@media (max-width:479px) {
  .circuit-37 {
    font-size: 14px;
    line-height: 20px;
  }
}

@media (max-width:479px) {
  .circuit-37 {
    margin-right: 12px;
  }
}

.circuit-41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.circuit-38 {
  background-color: #E6E6E6;
  border-radius: 999999px;
  position: relative;
  width: 100%;
  overflow: hidden;
  height: 4px;
}

.circuit-38::after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  background-color: #3063E9;
  -webkit-transition: width 0.05s ease-out;
  transition: width 0.05s ease-out;
  height: 100%;
  width: 1px;
}

.circuit-38::after {
  background-color: #1A1A1A;
}

.circuit-38::after {
  border-radius: 999999px;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  -webkit-animation-duration: 5640ms;
  animation-duration: 5640ms;
  -webkit-animation-play-state: running;
  animation-play-state: running;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.circuit-39 {
  font-size: 14px;
  line-height: 20px;
  margin-left: 8px;
}

.circuit-51 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 48px;
}

@media (max-width:479px) {
  .circuit-51 {
    margin-left: 12px;
  }
}

.circuit-44 {
  font-size: 16px;
  line-height: 24px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999;
  color: #000;
  padding: calc(12px - 1px) calc(24px - 1px);
  padding: calc(8px - 1px);
  margin-left: 8px;
}

.circuit-44:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-44:focus::-moz-focus-inner {
  border: 0;
}

.circuit-44:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-44:disabled,
.circuit-44[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-44:hover {
  background-color: #F5F5F5;
  border-color: #666;
}

.circuit-44:active,
.circuit-44[aria-expanded='true'],
.circuit-44[aria-pressed='true'] {
  background-color: #E6E6E6;
  border-color: #333;
}

.circuit-44:first-of-type {
  margin-left: 0;
}

.circuit-42 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
  aria-label="gallery"
  class="circuit-55 circuit-56"
>
  <div
    class="circuit-33 circuit-34"
  >
    <div
      class="circuit-9 circuit-10"
      width="100%"
    >
      <div
        class="circuit-7 circuit-8"
      >
        <div
          class="circuit-5 circuit-6"
          width="100%"
        >
          <div
            class="circuit-2 circuit-3 circuit-4"
          >
            <img
              alt="Aerial photo of turbulent blue ocean waves"
              class="circuit-0 circuit-1"
              src="https://source.unsplash.com/QU-zhliIV8Q/1600x900"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="circuit-20 circuit-10"
      width="100%"
    >
      <div
        class="circuit-7 circuit-8"
      >
        <div
          class="circuit-5 circuit-6"
          width="100%"
        >
          <div
            class="circuit-2 circuit-3 circuit-4"
          >
            <img
              alt="Aerial photo of turbulent turquoise ocean waves"
              class="circuit-0 circuit-1"
              src="https://source.unsplash.com/TpHmEoVSmfQ/1600x900"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="circuit-31 circuit-10"
      width="100%"
    >
      <div
        class="circuit-7 circuit-8"
      >
        <div
          class="circuit-5 circuit-6"
          width="100%"
        >
          <div
            class="circuit-2 circuit-3 circuit-4"
          >
            <img
              alt="Aerial photo of turbulent ocean water with white foam"
              class="circuit-0 circuit-1"
              src="https://source.unsplash.com/-lpbnspYkJg/1600x900"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="circuit-53 circuit-54"
  >
    <strong
      class="circuit-35 circuit-36 circuit-37"
    >
      1
       / 
      3
    </strong>
    <div
      class="circuit-40 circuit-41"
    >
      <span
        aria-labelledby="progress-bar_8"
        class="circuit-38"
        loop=""
      />
      <span
        class="circuit-39"
        id="progress-bar_8"
      />
    </div>
    <div
      class="circuit-51 circuit-52"
    >
      <button
        aria-label="pause"
        class="circuit-43 circuit-44"
        title="Pause"
      >
        <svg
          fill="none"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M6 1.7v12.6c0 .186-.105.364-.293.495A1.249 1.249 0 0 1 5 15a1.25 1.25 0 0 1-.707-.205C4.105 14.664 4 14.485 4 14.3V1.7c0-.186.105-.364.293-.495A1.25 1.25 0 0 1 5 1c.265 0 .52.074.707.205.188.131.293.31.293.495zm5-.7c-.265 0-.52.074-.707.205-.188.131-.293.31-.293.495v12.6c0 .186.105.364.293.495.187.131.442.205.707.205.265 0 .52-.074.707-.205.188-.131.293-.31.293-.495V1.7c0-.186-.105-.364-.293-.495A1.249 1.249 0 0 0 11 1z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="circuit-42"
        >
          Pause
        </span>
      </button>
      <button
        aria-label="previous"
        class="circuit-43 circuit-44"
        title="Previous"
      >
        <svg
          fill="none"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 8c0-.266.104-.52.29-.71l4-4c.19-.186.444-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71L7.42 8l3.29 3.29c.186.19.29.445.29.71a1 1 0 0 1-1 1c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 5 8z"
            fill="currentColor"
          />
        </svg>
        <span
          class="circuit-42"
        >
          Previous
        </span>
      </button>
      <button
        aria-label="next"
        class="circuit-43 circuit-44"
        title="Next"
      >
        <svg
          fill="none"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 8c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.265.104-.52.29-.71L8.58 8 5.29 4.71A1.013 1.013 0 0 1 5 4a1 1 0 0 1 1-1c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71z"
            fill="currentColor"
          />
        </svg>
        <span
          class="circuit-42"
        >
          Next
        </span>
      </button>
    </div>
  </div>
  <h1>
    Carousel heading
  </h1>
</div>
`;

exports[`Carousel styles should render with default paused styles 1`] = `
@keyframes animation-0 {
  0% {
    width: 0%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  90% {
    width: 100%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  100% {
    width: 100%;
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  90% {
    width: 100%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  100% {
    width: 100%;
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }
}

.circuit-55 {
  width: 100%;
  height: auto;
  position: relative;
}

.circuit-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  position: relative;
  width: 100%;
  height: auto;
}

.circuit-9 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(0%,0,0);
  -ms-transform: translate3d(0%,0,0);
  transform: translate3d(0%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: 0;
}

.circuit-7 {
  box-shadow: 0 0 1px rgba(0,0,0,0.05);
  overflow: hidden;
  will-change: width;
}

.circuit-5 {
  width: 100%;
}

.circuit-3 {
  display: block;
  position: relative;
  overflow: hidden;
  height: auto;
  width: 100%;
  height: 0;
  width: 100%;
  padding-top: 56%;
  background: #F5F5F5;
}

.circuit-0 {
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  max-height: none;
  object-fit: cover;
  z-index: 2;
}

.circuit-0 img {
  object-fit: cover;
}

.circuit-20 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(-100%,0,0);
  -ms-transform: translate3d(-100%,0,0);
  transform: translate3d(-100%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: -1;
}

.circuit-31 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(-200%,0,0);
  -ms-transform: translate3d(-200%,0,0);
  transform: translate3d(-200%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: -2;
}

.circuit-53 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 16px;
}

.circuit-37 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  font-weight: 700;
  margin-bottom: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 48px;
}

@media (max-width:479px) {
  .circuit-37 {
    font-size: 14px;
    line-height: 20px;
  }
}

@media (max-width:479px) {
  .circuit-37 {
    margin-right: 12px;
  }
}

.circuit-41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.circuit-39 {
  font-size: 14px;
  line-height: 20px;
  margin-left: 8px;
}

.circuit-51 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 48px;
}

@media (max-width:479px) {
  .circuit-51 {
    margin-left: 12px;
  }
}

.circuit-44 {
  font-size: 16px;
  line-height: 24px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999;
  color: #000;
  padding: calc(12px - 1px) calc(24px - 1px);
  padding: calc(8px - 1px);
  margin-left: 8px;
}

.circuit-44:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-44:focus::-moz-focus-inner {
  border: 0;
}

.circuit-44:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-44:disabled,
.circuit-44[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-44:hover {
  background-color: #F5F5F5;
  border-color: #666;
}

.circuit-44:active,
.circuit-44[aria-expanded='true'],
.circuit-44[aria-pressed='true'] {
  background-color: #E6E6E6;
  border-color: #333;
}

.circuit-44:first-of-type {
  margin-left: 0;
}

.circuit-42 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-38 {
  background-color: #E6E6E6;
  border-radius: 999999px;
  position: relative;
  width: 100%;
  overflow: hidden;
  height: 4px;
}

.circuit-38::after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  background-color: #3063E9;
  -webkit-transition: width 0.05s ease-out;
  transition: width 0.05s ease-out;
  height: 100%;
  width: 1px;
}

.circuit-38::after {
  background-color: #1A1A1A;
}

.circuit-38::after {
  border-radius: 999999px;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  -webkit-animation-duration: 5640ms;
  animation-duration: 5640ms;
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

<div
  aria-label="gallery"
  class="circuit-55 circuit-56"
>
  <div
    class="circuit-33 circuit-34"
  >
    <div
      class="circuit-9 circuit-10"
      width="100%"
    >
      <div
        class="circuit-7 circuit-8"
      >
        <div
          class="circuit-5 circuit-6"
          width="100%"
        >
          <div
            class="circuit-2 circuit-3 circuit-4"
          >
            <img
              alt="Aerial photo of turbulent blue ocean waves"
              class="circuit-0 circuit-1"
              src="https://source.unsplash.com/QU-zhliIV8Q/1600x900"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="circuit-20 circuit-10"
      width="100%"
    >
      <div
        class="circuit-7 circuit-8"
      >
        <div
          class="circuit-5 circuit-6"
          width="100%"
        >
          <div
            class="circuit-2 circuit-3 circuit-4"
          >
            <img
              alt="Aerial photo of turbulent turquoise ocean waves"
              class="circuit-0 circuit-1"
              src="https://source.unsplash.com/TpHmEoVSmfQ/1600x900"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="circuit-31 circuit-10"
      width="100%"
    >
      <div
        class="circuit-7 circuit-8"
      >
        <div
          class="circuit-5 circuit-6"
          width="100%"
        >
          <div
            class="circuit-2 circuit-3 circuit-4"
          >
            <img
              alt="Aerial photo of turbulent ocean water with white foam"
              class="circuit-0 circuit-1"
              src="https://source.unsplash.com/-lpbnspYkJg/1600x900"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="circuit-53 circuit-54"
  >
    <strong
      class="circuit-35 circuit-36 circuit-37"
    >
      1
       / 
      3
    </strong>
    <div
      class="circuit-40 circuit-41"
    >
      <span
        aria-labelledby="progress-bar_4"
        class="circuit-38"
        loop=""
      />
      <span
        class="circuit-39"
        id="progress-bar_4"
      />
    </div>
    <div
      class="circuit-51 circuit-52"
    >
      <button
        aria-label="play"
        class="circuit-43 circuit-44"
        title="Play"
      >
        <svg
          fill="none"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M15 8c-.001.247-.064.49-.182.703a1.383 1.383 0 0 1-.491.515l-9.334 5.6c-.2.121-.428.184-.66.182a1.306 1.306 0 0 1-.941-.411A1.44 1.44 0 0 1 3 13.6V2.4a1.44 1.44 0 0 1 .392-.989c.25-.262.588-.41.941-.41.232-.003.46.06.66.181l9.334 5.6c.203.124.373.301.49.515.119.214.182.456.183.703z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="circuit-42"
        >
          Play
        </span>
      </button>
      <button
        aria-label="previous"
        class="circuit-43 circuit-44"
        title="Previous"
      >
        <svg
          fill="none"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 8c0-.266.104-.52.29-.71l4-4c.19-.186.444-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71L7.42 8l3.29 3.29c.186.19.29.445.29.71a1 1 0 0 1-1 1c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 5 8z"
            fill="currentColor"
          />
        </svg>
        <span
          class="circuit-42"
        >
          Previous
        </span>
      </button>
      <button
        aria-label="next"
        class="circuit-43 circuit-44"
        title="Next"
      >
        <svg
          fill="none"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 8c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.265.104-.52.29-.71L8.58 8 5.29 4.71A1.013 1.013 0 0 1 5 4a1 1 0 0 1 1-1c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71z"
            fill="currentColor"
          />
        </svg>
        <span
          class="circuit-42"
        >
          Next
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Carousel styles should render with default styles 1`] = `
@keyframes animation-0 {
  0% {
    width: 0%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  90% {
    width: 100%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  100% {
    width: 100%;
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }
}

.circuit-55 {
  width: 100%;
  height: auto;
  position: relative;
}

.circuit-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  position: relative;
  width: 100%;
  height: auto;
}

.circuit-9 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(0%,0,0);
  -ms-transform: translate3d(0%,0,0);
  transform: translate3d(0%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: 0;
}

.circuit-7 {
  box-shadow: 0 0 1px rgba(0,0,0,0.05);
  overflow: hidden;
  will-change: width;
}

.circuit-5 {
  width: 100%;
}

.circuit-3 {
  display: block;
  position: relative;
  overflow: hidden;
  height: auto;
  width: 100%;
  height: 0;
  width: 100%;
  padding-top: 56%;
  background: #F5F5F5;
}

.circuit-0 {
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  max-height: none;
  object-fit: cover;
  z-index: 2;
}

.circuit-0 img {
  object-fit: cover;
}

.circuit-20 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(-100%,0,0);
  -ms-transform: translate3d(-100%,0,0);
  transform: translate3d(-100%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: -1;
}

.circuit-31 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(-200%,0,0);
  -ms-transform: translate3d(-200%,0,0);
  transform: translate3d(-200%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: -2;
}

.circuit-53 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 16px;
}

.circuit-37 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  font-weight: 700;
  margin-bottom: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 48px;
}

@media (max-width:479px) {
  .circuit-37 {
    font-size: 14px;
    line-height: 20px;
  }
}

@media (max-width:479px) {
  .circuit-37 {
    margin-right: 12px;
  }
}

.circuit-41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.circuit-38 {
  background-color: #E6E6E6;
  border-radius: 999999px;
  position: relative;
  width: 100%;
  overflow: hidden;
  height: 4px;
}

.circuit-38::after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  background-color: #3063E9;
  -webkit-transition: width 0.05s ease-out;
  transition: width 0.05s ease-out;
  height: 100%;
  width: 1px;
}

.circuit-38::after {
  background-color: #1A1A1A;
}

.circuit-38::after {
  border-radius: 999999px;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  -webkit-animation-duration: 5640ms;
  animation-duration: 5640ms;
  -webkit-animation-play-state: running;
  animation-play-state: running;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.circuit-39 {
  font-size: 14px;
  line-height: 20px;
  margin-left: 8px;
}

.circuit-51 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 48px;
}

@media (max-width:479px) {
  .circuit-51 {
    margin-left: 12px;
  }
}

.circuit-44 {
  font-size: 16px;
  line-height: 24px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999;
  color: #000;
  padding: calc(12px - 1px) calc(24px - 1px);
  padding: calc(8px - 1px);
  margin-left: 8px;
}

.circuit-44:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-44:focus::-moz-focus-inner {
  border: 0;
}

.circuit-44:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-44:disabled,
.circuit-44[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-44:hover {
  background-color: #F5F5F5;
  border-color: #666;
}

.circuit-44:active,
.circuit-44[aria-expanded='true'],
.circuit-44[aria-pressed='true'] {
  background-color: #E6E6E6;
  border-color: #333;
}

.circuit-44:first-of-type {
  margin-left: 0;
}

.circuit-42 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
  aria-label="gallery"
  class="circuit-55 circuit-56"
>
  <div
    class="circuit-33 circuit-34"
  >
    <div
      class="circuit-9 circuit-10"
      width="100%"
    >
      <div
        class="circuit-7 circuit-8"
      >
        <div
          class="circuit-5 circuit-6"
          width="100%"
        >
          <div
            class="circuit-2 circuit-3 circuit-4"
          >
            <img
              alt="Aerial photo of turbulent blue ocean waves"
              class="circuit-0 circuit-1"
              src="https://source.unsplash.com/QU-zhliIV8Q/1600x900"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="circuit-20 circuit-10"
      width="100%"
    >
      <div
        class="circuit-7 circuit-8"
      >
        <div
          class="circuit-5 circuit-6"
          width="100%"
        >
          <div
            class="circuit-2 circuit-3 circuit-4"
          >
            <img
              alt="Aerial photo of turbulent turquoise ocean waves"
              class="circuit-0 circuit-1"
              src="https://source.unsplash.com/TpHmEoVSmfQ/1600x900"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="circuit-31 circuit-10"
      width="100%"
    >
      <div
        class="circuit-7 circuit-8"
      >
        <div
          class="circuit-5 circuit-6"
          width="100%"
        >
          <div
            class="circuit-2 circuit-3 circuit-4"
          >
            <img
              alt="Aerial photo of turbulent ocean water with white foam"
              class="circuit-0 circuit-1"
              src="https://source.unsplash.com/-lpbnspYkJg/1600x900"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="circuit-53 circuit-54"
  >
    <strong
      class="circuit-35 circuit-36 circuit-37"
    >
      1
       / 
      3
    </strong>
    <div
      class="circuit-40 circuit-41"
    >
      <span
        aria-labelledby="progress-bar_2"
        class="circuit-38"
        loop=""
      />
      <span
        class="circuit-39"
        id="progress-bar_2"
      />
    </div>
    <div
      class="circuit-51 circuit-52"
    >
      <button
        aria-label="pause"
        class="circuit-43 circuit-44"
        title="Pause"
      >
        <svg
          fill="none"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M6 1.7v12.6c0 .186-.105.364-.293.495A1.249 1.249 0 0 1 5 15a1.25 1.25 0 0 1-.707-.205C4.105 14.664 4 14.485 4 14.3V1.7c0-.186.105-.364.293-.495A1.25 1.25 0 0 1 5 1c.265 0 .52.074.707.205.188.131.293.31.293.495zm5-.7c-.265 0-.52.074-.707.205-.188.131-.293.31-.293.495v12.6c0 .186.105.364.293.495.187.131.442.205.707.205.265 0 .52-.074.707-.205.188-.131.293-.31.293-.495V1.7c0-.186-.105-.364-.293-.495A1.249 1.249 0 0 0 11 1z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="circuit-42"
        >
          Pause
        </span>
      </button>
      <button
        aria-label="previous"
        class="circuit-43 circuit-44"
        title="Previous"
      >
        <svg
          fill="none"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 8c0-.266.104-.52.29-.71l4-4c.19-.186.444-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71L7.42 8l3.29 3.29c.186.19.29.445.29.71a1 1 0 0 1-1 1c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 5 8z"
            fill="currentColor"
          />
        </svg>
        <span
          class="circuit-42"
        >
          Previous
        </span>
      </button>
      <button
        aria-label="next"
        class="circuit-43 circuit-44"
        title="Next"
      >
        <svg
          fill="none"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 8c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.265.104-.52.29-.71L8.58 8 5.29 4.71A1.013 1.013 0 0 1 5 4a1 1 0 0 1 1-1c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71z"
            fill="currentColor"
          />
        </svg>
        <span
          class="circuit-42"
        >
          Next
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Carousel styles should render without controls 1`] = `null`;
